[metadata]
name = jupy5
version = 0.0.5
author = Nick McIntyre
author_email = nick@mcintyre.io
description = A library for creative coding in Python using Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickmcintyre/jupy5
project_urls =
    Bug Tracker = https://github.com/nickmcintyre/jupy5/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    ipython >= 8.5.0
    ipycanvas >= 0.13.1

[options.packages.find]
where = src
