[metadata]
name = ipycc
version = 0.0.11
author = Nick McIntyre
author_email = nick@mcintyre.io
description = A Python package for creative coding in Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickmcintyre/ipycc
project_urls =
    Bug Tracker = https://github.com/nickmcintyre/ipycc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    ipyevents >= 2.0.1
    ipycanvas >= 0.13.1

[options.packages.find]
where = src
